@@ -1,12 +1,15 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         DashProfiler
-version:      1.09
-version_from: lib/DashProfiler.pm
-installdirs:  site
-requires:
+--- #YAML:1.0
+name:                DashProfiler
+version:             1.11
+abstract:            
+license:             ~
+author:              
+    - Tim Bunce <Tim.Bunce@pobox.com>
+generated_by:        ExtUtils::MakeMaker version 6.42
+distribution_type:   module
+requires:     
     DBI:                           1.57
     Test::More:                    0
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.30
+meta-spec:
+    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
+    version: 1.3
