@@ -6,7 +6,7 @@ use Carp;
 
 use base qw(DashProfiler::Import);
 
-our $VERSION = sprintf("1.%06d", q$Revision: 41 $ =~ /(\d+)/o);
+our $VERSION = sprintf("1.%06d", q$Revision: 45 $ =~ /(\d+)/o);
 
 
 =head1 NAME
@@ -146,7 +146,7 @@ DashProfiler by Tim Bunce, L<http://www.tim.bunce.name> and
 L<http://blog.timbunce.org>
 
 =head1 COPYRIGHT
-        
+
 The DashProfiler distribution is Copyright (c) 2007-2008 Tim Bunce. Ireland.
 All rights reserved.
 
